plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.8'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.hibernate.orm' version '6.3.1.Final'
}

group = 'com.softeer5'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Hibernate
	implementation 'org.hibernate:hibernate-spatial:6.3.1.Final'
	implementation 'org.hibernate.validator:hibernate-validator'

	// JTS (Java Topology Suite)
	implementation 'org.locationtech.jts:jts-core:1.19.0'

	// mysql
	runtimeOnly 'com.mysql:mysql-connector-j'

	// h2
	implementation 'com.h2database:h2'
	implementation 'org.orbisgis:h2gis:2.2.1'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

	// macOS M1 Support (Network Resolver for macOS)
	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.68.Final:osx-aarch_64'

	// issue : https://github.com/spring-projects/spring-data-jpa/issues/3262
	implementation 'org.antlr:antlr4-runtime:4.10.1'

	// querydsl
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	//webClient
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	//hibernate envers
	implementation 'org.hibernate.orm:hibernate-envers:6.3.1.Final'

	// actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// prometheus
	implementation 'io.micrometer:micrometer-registry-prometheus'


	// test container
	testImplementation 'org.testcontainers:testcontainers:1.19.5'
	testImplementation 'org.testcontainers:junit-jupiter:1.19.5'
	testImplementation 'org.testcontainers:jdbc:1.19.5'
	testImplementation 'org.testcontainers:mysql:1.19.5'

	// jwt
	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
	implementation 'com.auth0:java-jwt:4.4.0'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate6'
	implementation 'com.alibaba.fastjson2:fastjson2-extension-spring6:2.0.55'
}

tasks.named('test') {
	useJUnitPlatform()
}
